--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "PrattleWeb": {
+    "prattle-web": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,16 +13,18 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/PrattleWeb",
+            "outputPath": "dist/prattle-web",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ],
             "styles": [
+              "src/prattle-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -44,31 +46,25 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                }
-              ]
+              "serviceWorker": true
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "PrattleWeb:build"
+            "browserTarget": "prattle-web:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "PrattleWeb:build:production"
+              "browserTarget": "prattle-web:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "PrattleWeb:build"
+            "browserTarget": "prattle-web:build"
           }
         },
         "test": {
@@ -79,12 +75,14 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": [],
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.json"
             ]
           }
         },
@@ -102,20 +100,19 @@
         }
       }
     },
-    "PrattleWeb-e2e": {
+    "prattle-web-e2e": {
       "root": "e2e/",
       "projectType": "application",
-      "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "PrattleWeb:serve"
+            "devServerTarget": "prattle-web:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "PrattleWeb:serve:production"
+              "devServerTarget": "prattle-web:serve:production"
             }
           }
         },
@@ -131,5 +128,5 @@
       }
     }
   },
-  "defaultProject": "PrattleWeb"
+  "defaultProject": "prattle-web"
 }
